--- a/_readme/04.pick-基于自动注入的api框架.md
+++ b/_readme/04.pick-基于自动注入的api框架.md
@@ -1,4 +1,4 @@
-pick[pick](https://github.com/liov/hoper/tree/master/server/go/v2/tiga/pick)
+pick[pick](https://github.com/hopeio/pick)
 一个很简单的框架，思路是一样的，利用反射实现自动注入，实在不想写业务的时候，有N个重复的controller，不知入参不知返回
 
 但是剔除了iris，iris其实是很笨重的，依赖颇多，大而杂，5版本和后续版本割裂，11版本为了遵循go的版本规范割裂，  
@@ -61,5 +61,3 @@ func (*UserService) Add(ctx *model.Ctx, req *model.SignupReq) (*response.TinyRep
 
 至此一个小型的api接口框架就成了，基本上的业务都可以用这套来写，简单轻巧更关注业务，  
 虽然业务调用是使用的反射，有那么一点点点的性能开销（跟具体业务比可以忽略不计），但是比重复写N多路由，写N多重复的controller层(只负责参数序列化和返回)清爽多了
-
-按理说pick就够用了，但我的目标是grpc，是跨语言
