--- a/_readme/10.一个通用的context.md
+++ b/_readme/10.一个通用的context.md
@@ -1,5 +1,5 @@
-grpc 生成的服务是这样的`Signup(ctx context.Context, in *SignupReq, opts ...grpc.CallOption) (*google.protobuf.Empty, error)`
-pick 定义的服务是这样的`Signup(ctx *contexti.Ctx, in *SignupReq, opts ...grpc.CallOption) (*google.protobuf.Empty, error)`
+grpc 的服务是这样的`Signup(ctx context.Context, in *SignupReq) (*google.protobuf.Empty, error)`
+pick[pick](https://github.com/hopeio/pick) 的服务是这样的`Signup(ctx *contexti.Ctx, in *SignupReq) (*google.protobuf.Empty, error)`
 
 很像，但还是有区别，grpc的服务是context接口，而pick的则是具体类型的指针，主观上，我是想统一的
 这就需要Ctx实现context接口，那就可以传入的是同一个东西，但技术上是不能实现的
